--- a/project-003-add-classes-svg/project-003-add-classes-svg.html
+++ b/project-003-add-classes-svg/project-003-add-classes-svg.html
@@ -3,9 +3,9 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <style>
  .circleClass{
-   fill:deeppink;
-   stroke:green;
-   stroke-width:5;
+   fill:yellow;
+   stroke:cyan;
+   stroke-width:10;
  }
 </style>
 </head>
