transition the circle - color, radius attributes

--- a/project-048-transition-chaining/index.html
+++ b/project-048-transition-chaining/index.html
@@ -20,7 +20,7 @@
       var circle = svg.append("circle")
                       .attr("cx","100px")
                       .attr("cy","100px")
-                      .attr("r","50px")
+                      .attr("r","80px")
                       .attr("fill","yellow")
                       .attr("stroke","deeppink")
                       .attr("stroke-width","10px");
@@ -30,6 +30,11 @@
         .duration(2000)
         .attr("cx","500px")
         .attr("cy","400px")
+        .attr("r","50px")
+        .attr("fill","deeppink")
+        .attr("stroke","yellow")
+        .attr("stroke-width","10px");
+
     </script>
 </body>
 </html>
