--- a/project-048-transition-chaining/index.html
+++ b/project-048-transition-chaining/index.html
@@ -20,7 +20,7 @@
       var circle = svg.append("circle")
                       .attr("cx","100px")
                       .attr("cy","100px")
-                      .attr("r","80px")
+                      .attr("r","50px")
                       .attr("fill","yellow")
                       .attr("stroke","deeppink")
                       .attr("stroke-width","10px");
@@ -30,10 +30,17 @@
         .duration(2000)
         .attr("cx","500px")
         .attr("cy","400px")
-        .attr("r","50px")
+        .attr("r","80px")
+        .transition()
+        .duration(2000)
         .attr("fill","deeppink")
         .attr("stroke","yellow")
-        .attr("stroke-width","10px");
+        .attr("stroke-width","10px")
+        .transition()
+        .duration(2000)
+        .attr("cx","100px")
+        .attr("cy","100px")
+        .attr("r","50px");
 
     </script>
 </body>
