--- a/project-049-tweening/index.html
+++ b/project-049-tweening/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
     <style>
     #content{
-        width:80px;
+        width:120px;
         height: 60px;
         background-color:gray;
         color:white;
@@ -29,11 +29,15 @@
 function showNumbers(){
     d3.select("#content")
       .transition()
-      .duration(10000)
+      .duration(10000).ease(d3.easeLinear)
       //.attr("value",100)
       .attrTween("value",function(){
           var numbers = d3.interpolateRound(0,100)
           return function(i){return numbers(i);};
+      })
+      .styleTween("font-size",function(){
+          var size = d3.interpolateString("20px","60px");
+          return function(i){return size(i);};
       });
 }
 </script>
