--- a/project-052-smiley-face/index.html
+++ b/project-052-smiley-face/index.html
@@ -13,6 +13,12 @@
         stroke:black;
         stroke-width: 2px;
     }
+
+    path{
+        fill:none;
+        stroke:black;
+        stroke-width:4px
+    }
     </style>
 </head>
 <body>
@@ -24,7 +30,7 @@
                 .attr("height",height)
                 .style("background-color","lime");
 
-    var svgGroup = svg.append("g").attr("transform","translate(0,0)");
+    var svgCircleGroup = svg.append("g").attr("transform","translate(0,0)");
 
     var circleData = [{
         x:200,
@@ -46,12 +52,29 @@
         }
         ]
 
-    var circle = svgGroup.selectAll("circle").data(circleData).enter()
+    var circle = svgCircleGroup.selectAll("circle").data(circleData).enter()
                          .append("circle")
                          .attr("cx",function(d){return d.x;})
                          .attr("cy",function(d){return d.y;})
                          .attr("r",function(d){return d.radius;})
                          .attr("fill",function(d){return d.color;})
+
+    var pathGroup = svg.append("g").attr("transform","translate(0,0)");
+    pathGroup.append("path")
+             .attr("id","mouth");
+
+    d3.select("#mouth")
+      .attr("d","M 150 240 S 200 200 250 240") // sad
+      //.attr("d","M 150 240 S 200 300 250 240") // smile
+      .transition()
+      .duration("5000")
+      .attrTween("d",function(){
+          return function(l){console.log("l = "+l); return "M 150 240 S 200 "+((l*150)+175)+" 250 240"};
+      });
+
+      /*
+      M 50 100 S 75 100 100 100
+      */
 </script>
 </body>
 </html>
