added drag option

--- a/project-054-drag-visualization/index.html
+++ b/project-054-drag-visualization/index.html
@@ -40,12 +40,24 @@
 
       var colors = d3.scaleOrdinal(d3.schemePaired);
 
+
+
+      var drag = d3.drag()
+                   .on("drag",moving);
       circles.enter()
                  .append("circle")
                  .attr("cx",function(d){return d.x;})
                  .attr("cy",function(d){return d.y;})
                  .attr("r",25)
-                 .attr("fill", function(d,i){return colors(i);});
+                 .attr("fill", function(d,i){return colors(i);})
+                 .call(drag);
+
+    function moving(){
+         d3.select(this).attr("cx",d3.event.x)
+                        .attr("cy",d3.event.y);
+         
+         
+    }
 
     </script>
 </body>
