--- a/project-055-zoom-data-visualization/index.html
+++ b/project-055-zoom-data-visualization/index.html
@@ -75,6 +75,7 @@
     }
 
     function zoomed(){
+        //console.log(d3.event.transform);
         d3.select(this)
           .attr("transform","translate("+d3.event.transform.x+","+
                                          d3.event.transform.y+") scale("+d3.event.transform.k+")");
