--- a/project-060-simple-tree/index.html
+++ b/project-060-simple-tree/index.html
@@ -27,6 +27,13 @@
 
       var dataStructure = d3.hierarchy(data);
       console.log(dataStructure);
+
+      var treeLayout = d3.tree()
+                         .size([400,200]);
+      
+      var information = treeLayout(dataStructure);
+      console.log(information);
+                         
    </script> 
 </body>
 </html>
