--- a/project-060-simple-tree/index.html
+++ b/project-060-simple-tree/index.html
@@ -10,7 +10,7 @@
 <body>
      
     <svg width="500" height="500">
-        <g>
+        <g transform="translate(20,20)"> 
            <g id="circles"></g>
            <g id="lines"></g>
         </g>
