add color to circles

--- a/project-060-simple-tree/index.html
+++ b/project-060-simple-tree/index.html
@@ -7,6 +7,12 @@
     <title>Layout - Tree Simple</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
+<style>
+circle{
+    fill:dodgerblue;
+    stroke:none;
+}
+</style>
 <body>
      
     <svg width="500" height="500">
