--- a/project-060-simple-tree/index.html
+++ b/project-060-simple-tree/index.html
@@ -32,7 +32,8 @@ line{
            "children":[
                {"name":"1.1","children":[
                    {"name":"1.1.1"},{"name":"1.1.2"},{"name":"1.1.3"}]},
-               {"name":"1.2"}]
+               {"name":"1.2","children":[
+                   {"name":"1.2.1"},{"name":"1.2.2"}]}]
       }
 
       var dataStructure = d3.hierarchy(data);
