--- a/project-061-tree-extended/index.html
+++ b/project-061-tree-extended/index.html
@@ -34,7 +34,7 @@ line{
                {"name":"1.1","children":[
                    {"name":"1.1.1"},{"name":"1.1.2"},{"name":"1.1.3"}]},
                {"name":"1.2","children":[
-                   {"name":"1.2.1"},{"name":"1.2.2"}]}]
+                   {"name":"1.2.1"}]}]
       }
 
       var dataStructure = d3.hierarchy(data);
@@ -52,8 +52,8 @@ line{
 
       circles.enter()
              .append("circle")
-             .attr("cx",function(d){return d.x;})
-             .attr("cy",function(d){return d.y;})
+             .attr("cx",function(d){return d.y;})
+             .attr("cy",function(d){return d.x;})
              .attr("r",5);
 
       var content = d3.select("svg g#info")
@@ -62,8 +62,8 @@ line{
       content.enter()
              .append("text")
              .text(function(d){return d.data.name;})
-             .attr("x",function(d){return d.x+5;})
-             .attr("y",function(d){return d.y+5;})
+             .attr("x",function(d){return d.y+10;})
+             .attr("y",function(d){return d.x+5;})
 
       var connections = d3.select("g #lines")
                           .selectAll("line")
@@ -71,10 +71,10 @@ line{
 
       connections.enter()
                  .append("line")
-                 .attr("x1",function(d){return d.source.x;})
-                 .attr("y1",function(d){return d.source.y;})
-                 .attr("x2",function(d){return d.target.x;})
-                 .attr("y2",function(d){return d.target.y;})
+                 .attr("x1",function(d){return d.source.y;})
+                 .attr("y1",function(d){return d.source.x;})
+                 .attr("x2",function(d){return d.target.y;})
+                 .attr("y2",function(d){return d.target.x;})
                          
    </script> 
 </body>
