add fill color blue

--- a/project-062-family-tree/index.html
+++ b/project-062-family-tree/index.html
@@ -7,6 +7,11 @@
     <title>Demo-Family-Tree</title>
     <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
+<style>
+circle{
+    fill:dodgerblue;
+}
+</style>
 <body>
     
     <script type="text/javascript">
