removed fill and added stroke

--- a/project-062-family-tree/index.html
+++ b/project-062-family-tree/index.html
@@ -11,6 +11,12 @@
 circle{
     fill:dodgerblue;
 }
+
+path{
+    fill:none;
+    stroke:blueviolet;
+    stroke-width: 3px;
+}
 </style>
 <body>
     
