adjusted x and y to center the rectangles

--- a/project-064-classic-family-tree/index.html
+++ b/project-064-classic-family-tree/index.html
@@ -64,8 +64,8 @@ path{
 
     rectangles.enter()
            .append("rect")
-           .attr("x",function(d){return d.x;})
-           .attr("y",function(d){return d.y;})
+           .attr("x",function(d){return d.x-40;})
+           .attr("y",function(d){return d.y-20;})
            .attr("r",5);
     
     let connections = svg.append("g")
