--- a/project-064-classic-family-tree/index.html
+++ b/project-064-classic-family-tree/index.html
@@ -26,6 +26,10 @@ text{
     dominant-baseline:middle;
     text-anchor: middle;
 }
+
+.bigger{
+    font-size:20px;
+}
 </style>
 <body>
     
@@ -103,6 +107,7 @@ text{
                  .text(function(d){return d.data.child;})
                  .attr("x",function(d){return d.x;})
                  .attr("y",function(d){return d.y;})
+                 .classed("bigger",true);
 
     </script>
 </body>
