testing tom with no spouse

--- a/project-065-classic-family-tree-spouse/index.html
+++ b/project-065-classic-family-tree-spouse/index.html
@@ -69,7 +69,7 @@ text{
                 {"id":7, "parentID":3,"child":"Sarah", "parent":"Kevin", "spouse":"Steve"},
                 {"id":8, "parentID":6,"child":"Mark", "parent":"Ann", "spouse":"Maria"},
                 {"id":9, "parentID":7,"child":"Angel", "parent":"Sarah", "spouse":"Nischal"},
-                {"id":10, "parentID":4,"child":"Tom", "parent":"Hannah", "spouse":"Monica"},
+                {"id":10, "parentID":4,"child":"Tom", "parent":"Hannah"},
                 {"id":11, "parentID":4,"child":"Emily", "parent":"Hannah", "spouse":"Gregory"},
                ];
 
@@ -121,7 +121,7 @@ text{
                      if (d.data.spouse !=undefined) {
                          return "Spouse: "+d.data.spouse;
                      } else {
-                         return "No Spouse.";
+                         return "No Spouse";
                      }
                  })
            })
