--- a/project-066-tree-with-images/index.html
+++ b/project-066-tree-with-images/index.html
@@ -11,8 +11,8 @@
 rect{
     fill:white;
     stroke:silver;
-    width:80px;
-    height:40px;
+    width:120px;
+    height:45px;
     stroke-width:2px;
 }
 
@@ -116,7 +116,7 @@ image{
 
     rectangles.enter()
            .append("rect")
-           .attr("x",function(d){return d.x-40;})
+           .attr("x",function(d){return d.x-60;})
            .attr("y",function(d){return d.y-20;})
            .attr("r",5)
            .on("mousedown",function(d){
@@ -142,8 +142,8 @@ image{
     pictures.enter()
             .append("image")
             .attr("href",function(d){return "images/"+d.data.icon;})
-            .attr("x",function(d){return d.x;})
-            .attr("y",function(d){return d.y;})
+            .attr("x",function(d){return d.x -70;})
+            .attr("y",function(d){return d.y -20;})
 
     let names = svg.append("g")
                    .selectAll("text")
